--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,13 +40,6 @@ jobs:
       - name: Build
         run: go build
 
-  docker-build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Build Docker image
-        run: make docker-build
 
   lint:
     runs-on: ubuntu-latest
@@ -108,3 +101,39 @@ jobs:
 
       - name: Unit tests
         run: go test ./...
+  docker-push-images:
+  
+    runs-on: ubuntu-latest
+    
+    env:
+      REGISTRY: registry.aetherproject.org
+      DOCKER_REGISTRY: registry.aetherproject.org/
+      DOCKER_REPOSITORY: sdcore/
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version-file: 'go.mod'
+
+      - run: echo GIT_SHA_SHORT=$(git rev-parse --short HEAD) >> $GITHUB_ENV
+
+      - uses: docker/login-action@v3.1.0
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERUSER }}
+          password: ${{ secrets.DOCKERPASS }}
+
+      - name: Build and push "master-latest" Docker image
+        env:
+          DOCKER_TAG: master-latest
+        run: |
+          make docker-build
+          make docker-push
+
+      - name: Build and push "master-GIT_SHA" Docker image
+        env:
+          DOCKER_TAG: master-${{ env.GIT_SHA_SHORT }}
+        run: |
+          make docker-build
+          make docker-push
