changed the docker repo path

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -108,7 +108,7 @@ jobs:
     env:
       REGISTRY: docker.io
       DOCKER_REGISTRY: docker.io/
-      DOCKER_REPOSITORY: ajeeshcazelabs/nssf/
+      DOCKER_REPOSITORY: ajeeshcazelabs
     steps:
       - uses: actions/checkout@v4
 
