--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -107,7 +107,7 @@ jobs:
     
     env:
       REGISTRY: docker.io
-      DOCKER_REGISTRY: ajeeshcazelabs
+      DOCKER_REGISTRY: ajeeshcazelabs/
       DOCKER_REPOSITORY: 5gc-smf/
     steps:
       - uses: actions/checkout@v4
