--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -106,8 +106,8 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-      REGISTRY: docker.io/bond00701011990722
-     # DOCKER_REGISTRY: ajeeshcazelabs/
+      REGISTRY: docker.io
+      DOCKER_REGISTRY: bond00701011990722/
      # DOCKER_REPOSITORY: 5gc-smf/
     steps:
       - uses: actions/checkout@v4
