--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -108,7 +108,8 @@ jobs:
     env:
       REGISTRY: docker.io
       DOCKER_REGISTRY: bond00701011990722/
-     # DOCKER_REPOSITORY: 5gc-smf/
+      DOCKER_REPOSITORY: 5gc-smf/
+      
     steps:
       - uses: actions/checkout@v4
 
