--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright 2023 Canonical Ltd.
-# Copyright 2024 Intel Corporation.
+# Copyright 2024 Intel Corporation
 
 name: Master workflow
 
@@ -108,7 +108,7 @@ jobs:
     env:
       REGISTRY: docker.io
       DOCKER_REGISTRY: bond00701011990722/
-            
+     # DOCKER_REPOSITORY: 5gc-smf/
     steps:
       - uses: actions/checkout@v4
 
